--- a/Finnish/main/MiuiBluetooth.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiBluetooth.apk/res/values-fi-rFI/strings.xml
@@ -31,6 +31,7 @@
   <string name="fast_connect_device_title_connecting">Yhdistetään…</string>
   <string name="fast_connect_device_title_find_headset">Löydä kuuloke %1$s</string>
   <string name="fast_connect_device_title_find_headset_others">Löydä kuuloke %1$s muut</string>
+  <string name="fast_connect_headset_reset">Paina ja pidä laatikossa olevaa painiketta pohjassa %1$d sekuntia</string>
   <string name="goto_package">Avaa %1$s</string>
   <string name="install_package">Asenna %1$s lisätoimintoja varten</string>
   <string name="mi_band_vibrate_alarm">Värise kun hälytys soi</string>
