--- a/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/CloudService.apk/res/values-fi-rFI/strings.xml
@@ -172,6 +172,7 @@
   <string name="micloud_find_device_verify_close">Poista Etsi laite käytöstä</string>
   <string name="micloud_find_device_verify_fail">Etsi laite -ominaisuutta ei voitu aktivoida uudelleen</string>
   <string name="micloud_find_device_verify_progress">Aktivoidaan Etsi laite -ominaisuutta uudelleen…</string>
+  <string name="micloud_last_sync_canceled">Synkronointi peruutettiin. Yritä uudelleen.</string>
   <string name="micloud_main_button_set_internet">Asetukset</string>
   <string name="micloud_main_head_menu_cloud_backup">Aloitusnäytön varmuuskopiointi</string>
   <string name="micloud_main_head_menu_finddevice_unavailable">Etsi laite ei ole käytettävissä Toisessa tilassa, voit käyttää sitä Ensimmäisessä tilassa.</string>
