--- a/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCoreAdd.apk/res/values-fi-rFI/strings.xml
@@ -151,6 +151,8 @@ Varmista, että yrityksesi nimi on oikein. Lue ja hyväksy tietosuojakäytäntö
   <string name="err_volume_not_enough">Tallennustilaa ei ole tarpeeksi</string>
   <string name="exit_private_space">Vaihda</string>
   <string name="experience_more_features">Lisää laite nähdäksesi kaikki ominaisuudet</string>
+  <string name="facebook_login">Kirjaudu käyttäen Facebookia</string>
+  <string name="facebook_send">Jaa Facebookiin</string>
   <string name="finger_print_num">Sormenjälki %d</string>
   <string name="finger_print_of_use">Käytä sormenjälkeä</string>
   <string name="fingerprint_number_upper_limit">Liian monta epäonnistunutta avausyritystä</string>
@@ -200,12 +202,13 @@ Voit myös ladata ne erikseen."</string>
   <string name="import_photo_suc">Tuodut kuvat</string>
   <string name="input_space_finger">Aseta nyt</string>
   <string name="input_space_password">Aseta nyt</string>
+  <string name="instagram_send">Jaa Instagramiin</string>
   <string name="install">Asenna</string>
   <string name="install_error">Ei voitu asentaa. Yritä uudelleen.</string>
   <string name="invalid_qr_code">Virheellinen QR-koodi</string>
   <string name="kid_mode_label">Lapsitila</string>
   <string name="list_empty_text">Tyhjä</string>
-  <string name="list_empty_text_xspace">Asenna WeChat/QQ/Weibo, luo kaksoissovellus ja yritä uudelleen.</string>
+  <string name="list_empty_text_xspace">Luo lisää kaksoissovelluksia ja yritä uudelleen.</string>
   <string name="loading">Odota hetki…</string>
   <string name="loading_apps">Ladataan sovelluksia…</string>
   <string name="loading_space">Odota hetki…</string>
@@ -268,8 +271,8 @@ Tai et välttämättä voi siirtyä Toiseen tilaan Lukitusnäytöltä."</string>
   <string name="radio_button_icon_switch_title">Käytetään pikakuvaketta</string>
   <string name="radio_button_password_switch_title">Käytetään salasanaa</string>
   <string name="removeSuccess">Poistettiin onnistuneesti</string>
-  <string name="remove_button">Poista ja käynnistä uudelleen</string>
-  <string name="remove_button_time">Poista ja käynnistä uudelleen (%d s)</string>
+  <string name="remove_button">Poista</string>
+  <string name="remove_button_time">Poista (%d s)</string>
   <string name="remove_second_space_msg">Kaikki Toisen tilan sovellustiedot menetetään Toisen tilan poistamisen jälkeen. Poistetaanko Toinen tila nyt?</string>
   <string name="remove_user_click_message">*Jos sinulla ei ole mitään tärkeitä kohteita Toisessa tilassa, %s</string>
   <string name="remove_user_click_message_action">voit poistaa Toisen tilan ja käynnistää laitteesi uudelleen nyt.</string>
@@ -382,7 +385,7 @@ Jos et suorita päivitystä, kaksoissovellukset ei välttämättä myöskään t
   <string name="start_new_fingerprint_tips">"Käytä Toisen tilan sormenjälkeä
 siirtyäksesi Toiseen tilaan Lukitusnäytöltä"</string>
   <string name="start_setting_guide_desc_title">Muutama asia, jotka täytyy asettaa</string>
-  <string name="stop_xspace_alert_content">Kaikki kaksoissovellukset ja niiden tiedot poistetaan pysyvästi. Sinun täytyy käynnistää laitteesi uudelleen ottaaksesi muutokset käyttöön. Poistetaanko tilit nyt?</string>
+  <string name="stop_xspace_alert_content">Poistetaanko kaikki kaksoissovellukset, niiden tilit ja sovellustiedot? Laitteesi käynnistetään uudelleen muutoksen jälkeen.</string>
   <string name="stop_xspace_alert_title">Kaksoissovelluksien tilien poistaminen</string>
   <string name="summary_switch_apps_settings">Valitse nykyisessä tilassa käytettävät sovellukset</string>
   <string name="support_desc">Tietoturvapalvelut tarjoaa Spaces Mobile</string>
@@ -431,28 +434,32 @@ siirtyäksesi Toiseen tilaan Lukitusnäytöltä"</string>
   <string name="undo_grant_dialog_message">Xiaomi lopettaa tämän toiminnon vaadittujen tietojen (IMEI, Laite ID, järjestelmäversio, alue, jne.) keräämisen valtuutuksen peruuttamisen jälkeen. Peruutetaanko valtuutus nyt?</string>
   <string name="undo_privacy_menu">Peruuta valtuutus</string>
   <string name="undo_success">Valtuutus peruutettiin onnistuneesti</string>
-  <string name="use_xiaoai_open">Herätä käyttäen ääniavustajaa</string>
+  <string name="use_google_open">Herätä käyttäen Google Avustajaa</string>
+  <string name="use_xiaoai_open">Herätä käyttäen Mi AI:ta</string>
   <string name="wating">Odota hetki…</string>
   <string name="weibo_send">Lähetä Weiboon</string>
   <string name="weixin_pay">WeChat Pay</string>
   <string name="weixin_share_sign">Kirjaudu sisään ja jaa</string>
+  <string name="whatsapp_send">Jaa WhatsAppissa</string>
   <string name="xpsace_guide_button">Luo</string>
   <string name="xspace_account">Kaksoissovelluksien tilit</string>
   <string name="xspace_chocie">Kaksoissovelluksien tuki</string>
   <string name="xspace_creating">Luodaan kaksoissovellusta…</string>
-  <string name="xspace_default_app_summary">Aseta oletussovellus maksuille, jakamiselle, suosikeille ja paljon muuta.</string>
-  <string name="xspace_default_app_title">Oletussovellus</string>
+  <string name="xspace_default_app_summary">Valitse oletussovellus kirjautumiselle, jakamiselle ja ääniavustajalle.</string>
+  <string name="xspace_default_app_title">Mukauttaminen</string>
   <string name="xspace_default_guide_notification_content">Vaihda napauttamalla</string>
   <string name="xspace_default_guide_notification_main_title">Käytetään oletussovellusta</string>
   <string name="xspace_default_guide_notification_xspace_title">Käytetään kaksoissovellusta</string>
   <string name="xspace_default_setting_dialog_title"> oletus</string>
-  <string name="xspace_default_setting_label">Oletussovellus</string>
+  <string name="xspace_default_setting_label">Mukauttaminen</string>
   <string name="xspace_description">"Kaksoissovellus on sovelluksen kopio, jossa voi käyttää eri tiliä.
 
 Jotkut kaksoissovellukset vaativat Google Services Frameworkin tuen. Näissä tapauksissa, kaksi Google Services Framework:iä luodaan."</string>
+  <string name="xspace_facebook_title">Facebook</string>
   <string name="xspace_guide_des">Käytä kahta tiliä ilman, että vaihdat niiden välillä</string>
   <string name="xspace_guide_title">Luo kaksoissovellus</string>
   <string name="xspace_header">Kaksoissovellukset</string>
+  <string name="xspace_instagram_title">Instagram</string>
   <string name="xspace_install_completed">Kuvake lisätty Aloitusnäytölle</string>
   <string name="xspace_install_completed_global">Kuvake lisätty valikkoon</string>
   <string name="xspace_install_failed">Luominen epäonnistui</string>
@@ -469,4 +476,5 @@ Jotkut kaksoissovellukset vaativat Google Services Frameworkin tuen. Näissä ta
   <string name="xspace_uninstalling">Poistetaan…</string>
   <string name="xspace_weibo_title">Weibo</string>
   <string name="xspace_weixin_title">WeChat</string>
+  <string name="xspace_whatsapp_title">WhatsApp</string>
 </resources>
